1.0-12
* Added threat warnings.
* Damage and healing spell lists are now scaled relative to the highest hit/heal instead of the total damage/healing.
* Fixed a bug where enabling a module with old data could produce errors.

1.0-11
* LDB data feed now doesn't reset value after combat.

1.0-10
* Added a "Delete segment" option to the menu.
* Added an option to keep specific fight segments (from menu).
* Added an alternating default color, by default a lighter shade of blue.
* Fixed mousewheel scrolling not working on background frame.
* Made the number of segments kept configurable.

1.0-9:
* Added a death log to deaths mode; shows the last heals and damage on the player.
* Added a "/skada toggle" command for toggling showing the window other than through clicking.
* Added data feeds for showing in an LDB display addon such as Titan Panel. Currently there are personal DPS, raid DPS, and Threat feeds available. These feeds are only available if you are running the corresponding module.
* Added a menu on right-clicking the minimap/LDB icon or shift-clicking the window header; currently has options for setting mode and for reporting. The reporting bit is a little limited at the moment.
* Added an optional background frame. It can either change size dynamically according to the number of shown bars, or have a fixed size, which will then determine the number of shown bars.
* Added a Hide when solo option.
* Fixed Total segment not being saved - note that you have to reset once for this to start working.
* Fixed profile changing/resetting/copying not taking immediate effect and not saving some settings properly.
* Fixed resetting not removing saved data on relog.
* Removed resisted/absorbed from damage mode spell details.

1.0-8:
* Fixed self and party pets not appearing in Threat mode when in a party.
* Improved memory usage.

1.0-7:
* The window is now scrollable.
* Threat mode now shows threat value in addition to percentage relative to tank.